Stick nav z-index fix, fixed adding QP using admin menu.

--- a/components/PlayerHUD.scss
+++ b/components/PlayerHUD.scss
@@ -35,7 +35,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 10;
     background: var(--hud-bg);
     padding: 5px 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
